added UserManagerImplTest, fixed some bugs